# aoe2de_xslibs

./: .gitignore  README.md  pyproject.toml
src/exporter/: exporter.py
src/xs/: binary_functions.py  bool_list.py  exporter.py  float_int_dict.py  float_list.py  float_string_dict.py  float_vector_dict.py  functions.py  int_int_dict.py  int_int_dict2.py  int_int_dict3.py  int_list.py  int_string_dict.py  int_vector_dict.py  string_int_dict.py  string_list.py  string_string_dict.py  string_vector_dict.py  vector_int_dict.py  vector_list.py  vector_string_dict.py  vector_vector_dict.py
src/xs_converter/: __init__.py  constants.py  context.py  converter.py  exceptions.py  functions.py  macro.py  symbols.py
src/xslibs.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: functions_test.py  int_int_dict_test.py  int_list_test.py  test.py
tests/c/: mt.cpp
tests/test_xs/: test_binary_functions.py  test_bool_list.py  test_float_int_dict.py  test_float_list.py  test_float_string_dict.py  test_float_vector_dict.py  test_int_int_dict.py  test_int_int_dict2.py  test_int_int_dict3.py  test_int_list.py  test_int_string_dict.py  test_int_vector_dict.py  test_string_int_dict.py  test_string_list.py  test_string_string_dict.py  (+5 more)
xs/: binaryFunctions.xs  boolList.xs  floatIntDict.xs  floatList.xs  floatStringDict.xs  floatVectorDict.xs  functions.xs  intIntDict.xs  intList.xs  intStringDict.xs  intVectorDict.xs  stringIntDict.xs  stringList.xs  stringStringDict.xs  stringVectorDict.xs  vectorIntDict.xs  vectorList.xs  vectorStringDict.xs  vectorVectorDict.xs
(+26 files in other folders)
